force-app/main/default/objects/Lead/fields/Brand_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Brand_Logo_URL__c</fullName>
    <label>Brand Logo URL</label>
    <type>Url</type>
</CustomField>