force-app/main/default/objects/Lead/fields/Branding_Status__c.field-meta.xml
<CustomField>
    <fullName>Branding_Status__c</fullName>
    <label>Branding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>