force-app/main/default/objects/Lead/fields/Company_Domain__c.field-meta.xml
<CustomField>
    <fullName>Company_Domain__c</fullName>
    <label>Company Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>